dart/lib/storage/bindings.dart


@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Int)>(
    symbol: 'tarantool_index_count_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_count_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int index_id,
  ffi.Pointer<ffi.Char> key,
  int key_size,
  int iterator_type,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_count_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_count_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_index_id_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_id_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  ffi.Pointer<ffi.Char> name,
  int name_length,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_id_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_id_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_index_update_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_update_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int index_id,
  ffi.Pointer<ffi.Char> key,
  int key_size,
  ffi.Pointer<ffi.Char> operations,
  int operations_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_update_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_update_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_call_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_call_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<ffi.Char> function,
  int function_length,
  ffi.Pointer<ffi.Char> input,
  int input_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_call_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_call_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_evaluate_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_evaluate_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<ffi.Char> script,
  int script_length,
  ffi.Pointer<ffi.Char> input,
  int input_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_evaluate_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_evaluate_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Size)>(
    symbol: 'tarantool_index_iterator_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_iterator_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int index_id,
  int type,
  ffi.Pointer<ffi.Char> key,
  int key_size,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_iterator_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_iterator_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Int)>(
    symbol: 'tarantool_index_select_request_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_select_request_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int index_id,
  ffi.Pointer<ffi.Char> key,
  int key_size,
  int offset,
  int limit,
  int iterator_type,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_select_request_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_select_request_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.Uint32, ffi.Uint32)>(
    symbol: 'tarantool_index_id_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_index_id_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
  int index_id,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_index_id_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_index_id_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.Pointer<ffi.Char>, ffi.Size)>(
    symbol: 'tarantool_space_id_by_name_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_id_by_name_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<ffi.Char> name,
  int name_length,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_id_by_name_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_id_by_name_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.Uint32)>(
    symbol: 'tarantool_space_length_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_length_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_length_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_length_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.Uint32)>(
    symbol: 'tarantool_space_truncate_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_space_truncate_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int space_id,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_space_truncate_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_space_truncate_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.IntPtr, ffi.Uint32)>(
    symbol: 'tarantool_iterator_next_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_iterator_next_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int iterator,
  int count,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<tarantool_factory>,
            ffi.Pointer<linux_interactor_bindings.interactor_message>)>(
    symbol: 'tarantool_iterator_next_free',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external void tarantool_iterator_next_free(
  ffi.Pointer<tarantool_factory> factory1,
  ffi.Pointer<linux_interactor_bindings.interactor_message> message,
);

@ffi.Native<
        ffi.Pointer<linux_interactor_bindings.interactor_message> Function(
            ffi.Pointer<tarantool_factory>, ffi.IntPtr)>(
    symbol: 'tarantool_iterator_destroy_prepare',
    assetId: 'tarantool-bindings',
    isLeaf: true)
external ffi.Pointer<linux_interactor_bindings.interactor_message>
    tarantool_iterator_destroy_prepare(
  ffi.Pointer<tarantool_factory> factory1,
  int iterator,
);
